[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.17", features = [
                            "std",
                            "serde",
                            "kv_unstable",
                            "kv_unstable_serde",
] }
reqwest = { version = "0.11.13", features = [
                            "cookies",
                            "multipart",
                            "json",
                            "rustls",
                            "trust-dns",
                            "socks",
                            "stream",
                            "async-compression",
] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["raw_value"] }
